Added date and current weather for a particular location

--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,9 @@
+  body{
+    background-color: #2443499e;
+  }
+
 .weather-ap {
+background-color: #fff;
 margin: 30px auto;
 padding: 30px 30px 0;
 border: 1px solid #dadde1;
@@ -8,6 +13,10 @@ border-radius: 6px;
 
 li {
     list-style: none;
+}
+
+li::first-letter{
+  text-transform: capitalize;
 }
 
 #city {
